Header에서 Home 제거

--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -11,16 +11,13 @@
 
 <nav class="navbar navbar-expand-lg" style="background-color: lightskyblue">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Navbar</a>
+        <a class="navbar-brand" href="/">Idea-Board</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav" style="padding: 5px 30px">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         카테고리
