--- a/src/main/resources/static/css/loginpage.css
+++ b/src/main/resources/static/css/loginpage.css
@@ -27,15 +27,13 @@ a {
 }
 button {
     border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    border: 1px solid #2b67ff;
+    background-color: #2b67ff;
     color: #FFFFFF;
-    font-size: 12px;
-    font-weight: bold;
+    font-size: 15px;
     padding: 12px 45px;
     letter-spacing: 1px;
-    text-transform: uppercase;
-    transition: transform 80ms ease-in;
+    margin-top: 5px;
 }
 form {
     background-color: #FFFFFF;
