--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -4,14 +4,12 @@
 <div class="form-container sign-in-container">
     <form action="#">
       <h1>로그인</h1>
-
-      <span>or use your account</span>
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Password" />
-      <a href="#">Forgot your password?</a>
+      <input type="text" placeholder="아이디" />
+      <input type="password" placeholder="비밀번호" />
       <button>로그인</button>
       <button>카카오 로그인</button>
       <button>회원가입</button>
+       <a href="#">아이디/비밀번호 찾기</a>
     </form>
   </div>
 <br>
