--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -1,7 +1,7 @@
 {{>layouts/header}}
     <link href="/css/loginpage.css" rel="stylesheet">
 <br>
-<div class="form-container sign-in-container">
+<div>
     <form action="#">
       <h1>로그인</h1>
       <input type="text" placeholder="아이디" />
@@ -11,6 +11,6 @@
       <button>회원가입</button>
        <a href="#">아이디/비밀번호 찾기</a>
     </form>
-  </div>
+ </div>
 <br>
 {{>layouts/footer}}
