--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -8,8 +8,8 @@
       <input type="password" placeholder="비밀번호" />
       <button>로그인</button>
       <button>카카오 로그인</button>
-      <button>회원가입</button>
-       <a href="#">아이디/비밀번호 찾기</a>
+      <button><a href="signup">회원가입</a></button>
+       <a class="link" href="#">아이디/비밀번호 찾기</a>
     </form>
  </div>
 <br>
