--- a/src/main/resources/templates/hello.mustache
+++ b/src/main/resources/templates/hello.mustache
@@ -10,7 +10,9 @@
 <br>
 <a href="/list">글 리스트 페이지</a>
 <br>
-<a href="/mypage">마이 페이지</a>
+<a href="/mypage">마이 페이지 - 로그인</a>
+<br>
+<a href="/mypage2">마이 페이지 - 로그인x</a>
 <br>
 <a href="/writer">글 작성 페이지</a>
 <br>
