--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-expand-lg" style="background-color: lightskyblue">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Idea-Board</a>
+        <a class="navbar-brand" href="/">Idea-Market</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
