--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -26,18 +26,26 @@
       <input type="password" placeholder="비밀번호" />
       <input type="password" placeholder="비밀번호 확인" />
       <input type="text" placeholder="전화번호" />
+
       <div class="check">
-      <input class="birth_inp" type="email"  placeholder="이메일" />
-      <button type="button" class="btn btn-secondary btn-sm ">인증번호
-      전송</button>
+        <input class="birth_inp" type="email"  placeholder="이메일" />
+        <button type="button" class="btn btn-secondary btn-sm ">인증번호
+         전송</button>
       </div>
+
       <div class="check">
-      <input class="birth_inp" type="text" placeholder="이메일 인증 번호" />
-      <button type="button" class="btn btn-secondary btn-sm">인증번호 확인</button>
+        <input class="birth_inp" type="text" placeholder="이메일 인증 번호" />
+        <button type="button" class="btn btn-secondary btn-sm ">인증번호 확인</button>
       </div>
-      <button>가입하기</button>
-      <a href="login">로그인 하기</a>
-      </form>
+
+        <div class="signup_btn">
+            <a href="main" class="signup_btn">가입하기</a>
+        </div>
+
+        <div class="bottomText">
+            이미 계정이 있으신가요? <a href="login">로그인 하기</a>
+        </div>
+    </form>
 
  </div>
 <br>
