feat) 회원가입기능 (role,성별도 db에 들어가게 추가)

--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -10,17 +10,17 @@
 
       <input class="birth_inp" type="text" name="birth" placeholder="출생년도 ex)981001" />
 
-       {{!주석
+
       <div class="radio_box">
         <p>성별</p>
-        <input class="radio_inp" type="radio" name="gender" id="male"/>
+        <input class="radio_inp" type="radio" name="gender" value="1"/>
         <p>남자</p>
-        <input class="radio_inp"  type="radio" name="gender" id="female"/>
+        <input class="radio_inp"  type="radio" name="gender" value="2"/>
         <p>여자</p>
-        <input class="radio_inp"  type="radio" name="gender" id="none"/>
+        <input class="radio_inp"  type="radio" name="gender" value="3"/>
         <p>기타</p>
       </div>
-         }}
+
 
       <input type="text" name="loginId" placeholder="아이디" />
       <input type="password" name="password" placeholder="비밀번호" />
