좋아요 순 리스트화 진행중 1. Board,Good,User Repository 추가 (다른분 반영했다면 미반영해도됨) 2. Good Service 추가 3. 무스타치 main 출력 형식 추가

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -19,14 +19,16 @@
             </tr>
             </thead>
             <tbody class="table-group-divider">
+            {{#list}}
                 <tr>
-                    <th>1</th>
-                    <td><a href="/">제목111</a></td>
-                    <td>10</td>
+                    <th>{{id}}</th>
+                    <td><a href="/">{{content}}</a></td>
+                    <td>2</td>
                     <td>유저1</td>
                     <td>23</td>
                     <td>20221204</td>
                 </tr>
+            {{/list}}
             </tbody>
         </table>
     </div>
