--- a/src/main/resources/templates/writer.mustache
+++ b/src/main/resources/templates/writer.mustache
@@ -1,10 +1,10 @@
 {{>layouts/header}}
 <br>
-
+<link rel="stylesheet" href="css/writer.css">
 
 <div class="container text-center">
 <form method="post" action="">
-    <table class="table table-striped" style="text-align: center; border: solid 1px #dddddd">
+    <table class="table table-striped" style="text-align: center; border: solid 1px #dddddd; word-break : break-all ; height : auto; width: 700px">
         <thead>
         <tr>
             <th style="text-align: center;">게시판 글쓰기 양식</th>
