2022 12 07 - view, create, update, edit
edit는 PutMapping 수정하면 됩니다.
dto 분리 아직 안 했습니다.

--- a/src/main/resources/templates/list.mustache
+++ b/src/main/resources/templates/list.mustache
@@ -50,7 +50,8 @@
         <button class="btn btn-primary">다음페이지</button>
     </div>
     <div class="col-3 text-end">
-        <button class="btn btn-danger">글 작성</button>
+<!--        <button class="btn btn-danger"><a href="/boards/write">글 작성</a></button>-->
+        <a href="/boards/write">글 작성</a>
     </div>
 </div>
 {{>layouts/footer}}
