2022 12 07 - write, delete, edit 구현

--- a/src/main/resources/templates/detail.mustache
+++ b/src/main/resources/templates/detail.mustache
@@ -10,6 +10,7 @@
             <a href="/boards/edit/{{board.id}}" class="btn btn-primary">수정</a>
         </div>
                 <ul>
+<!--                    css가 풀린 부분-->
                     <li><input class="id" type="hidden" name="id"></li>
 
                     <li><h2 class="title">제목 : {{board.title}}</h2></li>
