--- a/src/main/resources/templates/edit.mustache
+++ b/src/main/resources/templates/edit.mustache
@@ -1,7 +1,7 @@
 {{>layouts/header}}
 <br>
 <div class="container text-center">
-    <form method="put" action="/boards/update/{{board.id}}">
+    <form method="post" action="/boards/update/{{board.id}}">
         <table class="table table-striped" style="text-align: center; border: solid 1px #dddddd">
             <thead>
             <tr>
