--- a/src/main/resources/templates/list.mustache
+++ b/src/main/resources/templates/list.mustache
@@ -1,6 +1,7 @@
 {{>layouts/header}}
 <br>
 <div>
+<!--    list-->
     <form action="/list" method="get" class="row">
         <div class="offset-1 col-3">
             <h3>1번 카테고리 이름</h3>
