2022 12 07 - write, delete, edit 구현

--- a/src/main/resources/templates/detail.mustache
+++ b/src/main/resources/templates/detail.mustache
@@ -6,6 +6,7 @@
 <div id="all">
     <div class="container">
         <div class="detailbtn" class="btn">
+<!--            href-->
             <a href="/boards/delete/{{board.id}}" class="btn btn-primary">삭제</a>
             <a href="/boards/edit/{{board.id}}" class="btn btn-primary">수정</a>
         </div>
