--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -5,15 +5,15 @@
     <form  action="/create" method="post" >
       <h1>회원 가입</h1>
 
-      <input type="text" name="name" placeholder="이름" />
+      <input type="text" name="name" placeholder="이름" required />
 
 
-      <input class="birth_inp" type="text" name="birth" placeholder="출생년도 ex)981001" />
+      <input class="birth_inp" type="text" name="birth" placeholder="출생년도 ex)981001" required />
 
 
       <div class="radio_box">
         <p>성별</p>
-        <input class="radio_inp" type="radio" name="gender" value="1"/>
+        <input class="radio_inp" type="radio" name="gender" value="1" required/>
         <p>남자</p>
         <input class="radio_inp"  type="radio" name="gender" value="2"/>
         <p>여자</p>
@@ -22,19 +22,19 @@
       </div>
 
 
-      <input type="text" name="loginId" placeholder="아이디" />
-      <input type="password" name="password" placeholder="비밀번호" />
-      <input type="password" placeholder="비밀번호 확인" />
-      <input type="text" name="phoneNumber" placeholder="전화번호" />
+      <input type="text" name="loginId" placeholder="아이디" required/>
+      <input type="password" name="password" placeholder="비밀번호" required/>
+      <input type="password" placeholder="비밀번호 확인" required/>
+      <input type="text" name="phoneNumber" placeholder="전화번호" required/>
 
       <div class="check">
-        <input class="birth_inp" type="email" name="email" placeholder="이메일" />
+        <input class="birth_inp" type="email" name="email" placeholder="이메일" required/>
         <button type="button" class="btn btn-secondary btn-sm ">인증번호
          전송</button>
       </div>
 
       <div class="check">
-        <input class="birth_inp" type="text" placeholder="이메일 인증 번호" />
+        <input class="birth_inp" type="text" placeholder="이메일 인증 번호" required/>
         <button type="button" class="btn btn-secondary btn-sm ">인증번호 확인</button>
       </div>
 
