--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -22,7 +22,7 @@
             {{#list}}
                 <tr>
                     <th>{{id}}</th>
-                    <td><a href="/">{{content}}</a></td>
+                    <td><a href="/">{{title}}</a></td>
                     <td>2</td>
                     <td>유저1</td>
                     <td>23</td>
