--- a/src/main/resources/templates/list.mustache
+++ b/src/main/resources/templates/list.mustache
@@ -40,7 +40,7 @@
             {{#boards}}
                 <tr>
                     <th>{{id}}</th>
-                    <td><a href="/">{{title}}</a></td>
+                    <td><a href="/boards/view/{{id}}">{{title}}</a></td>
                     <td>{{userName}}</td>
                     <td>{{commentCount}}</td>
                     <td>{{goodCount}}</td>
