--- a/src/main/resources/templates/hello.mustache
+++ b/src/main/resources/templates/hello.mustache
@@ -6,9 +6,9 @@
 <br>
 <a href="/signup">회원가입 페이지</a>
 <br>
-<a href="/main">메인 페이지</a>
+<a href="/popular">메인 페이지</a>
 <br>
-<a href="/list">글 리스트 페이지</a>
+<a href="/boards/일반게시판">글 리스트 페이지</a>
 <br>
 <a href="/mypage">마이 페이지 - 로그인</a>
 <br>
