--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -2,10 +2,10 @@
     <link href="/css/loginpage.css" rel="stylesheet">
 <br>
 <div>
-    <form action="#">
+    <form action="/users/login" method="post">
       <h1>로그인</h1>
-      <input type="text" placeholder="아이디" />
-      <input type="password" placeholder="비밀번호" />
+      <input type="text" name="loginId" placeholder="아이디" />
+      <input type="password" name="password" placeholder="비밀번호" />
 
 
             <button type="submit" class="login_btn">로그인</button>
