feat) 회원가입기능 (id 중복 check)

--- a/src/main/resources/templates/iddup.mustache
+++ b/src/main/resources/templates/iddup.mustache
@@ -4,7 +4,11 @@
 <div>
     <form  action="/create" method="post" >
       <h1>회원 가입</h1>
+<script type="text/javascript">
 
+  alert("아이디가 중복됩니다.");
+
+</script>
       <input type="text" name="name" placeholder="이름" "required/>
 
 
