--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -3,7 +3,9 @@
     /*font-family: 'NanumSquareBold';*/
 
 }
-
+a{
+    text-decoration-line: none;
+}
 li{
     list-style: none;
 }
@@ -15,6 +17,7 @@ li{
     margin-left: 100px;
     margin-right: 100px;
 }
+
 
 .detail_btn{
     height: 40px;
@@ -31,12 +34,12 @@ li{
     margin-right: 10px;
     margin-bottom: 30px;
     margin-top: 10px;
-    text-align: center;
 }
-
 .detail_btn>a {
     border: 1px solid lightskyblue;
     float: right;
+    display: flex;
+    justify-content: space-between;
 }
 
 .detail_btn >a:hover {
@@ -44,10 +47,11 @@ li{
     color: white;
 }
 
-.comment_btn{
+.comment_btn>a, .comment_btn>button[type=submit], .comment_btn>button[type=reset] {
     height: 40px;
     padding: 0 13px;
     border-radius: 20px;
+    border: 1px solid lightskyblue;
     font-size: 13px;
     color: #000;
     line-height: 38px;
@@ -58,17 +62,15 @@ li{
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 30px;
-    margin-top: 10px;
-    text-align: center;
+}
+.comment_btn>a:hover, .comment_btn>button[type=submit]:hover, .comment_btn>button[type=reset]:hover {
+    background-color: lightskyblue;
+    color: white;
+    cursor: pointer;
 }
 
 .comment_btn>a{
-    border: 1px solid lightskyblue;
-}
-
-.comment_btn >a:hover {
-    background-color: lightskyblue;
-    color: white;
+    text-decoration: none;
 }
 
 .content{
