--- a/src/main/resources/static/css/loginpage.css
+++ b/src/main/resources/static/css/loginpage.css
@@ -42,12 +42,12 @@ a {
     width: 400px;
 }
 
-.kakao_btn{
+/*.kakao_btn{
     display:block;
     margin: 8px 0;
     height: 40px;
     width: 400px;
-}
+}*/
 
 /*아이디찾기 비밀번호 찾기*/
 .bottomText{
