회원가입 로직 수정

--- a/src/main/resources/templates/detail.mustache
+++ b/src/main/resources/templates/detail.mustache
@@ -1,7 +1,7 @@
 {{>layouts/header}}
 <br>
 
-<link rel="stylesheet" href="css/detail.css">
+<link rel="stylesheet" href="/css/detail.css">
 <div id="all">
     {{#board}}
     <div class="container">
