--- a/src/main/resources/templates/detail.mustache
+++ b/src/main/resources/templates/detail.mustache
@@ -19,29 +19,27 @@
             <li><pre class="content">내용 : {{board.content}}</pre></li>
             <img src="images" onerror="this.style.display='none';"/>
             {{!이미지가 없을 경우 대체 이미지 숨기기}}
-            <li class="cnt">
-                {{#goods}}
-                    <div>
+
+            {{#goods}}
+                <div>
                     <form method="post" action="/boards/like/{{board.id}}">
                         <input type="submit" value="좋아요">
                     </form>
-                    </div>
-                {{/goods}}
-                {{^goods}}
-                    <div>
-                        <form method="post" action="/boards/like/{{board.id}}">
-                            <input type="submit" value="좋아요취소">
-                        </form>
-                    </div>
-                {{/goods}}
+                </div>
+            {{/goods}}
+            {{^goods}}
+                <div>
+                    <form method="post" action="/boards/like/{{board.id}}">
+                        <input type="submit" value="좋아요 취소">
+                    </form>
+                </div>
+            {{/goods}}
 
-
-            좋아요 수</li> <li class="cnt">조회 수 &nbsp;</li> <li style="float: right;"><h6>작성일자 : </h6></li>
-
+            <li class="cnt">좋아요 수</li> <li class="cnt">조회 수 &nbsp;</li> <li style="float: right;"><h6>작성일자 : </h6></li>
 
         </ul>
     </div>
-        {{/board}}
+    {{/board}}
     {{! 이전 글 다음 글}}
     <div class="page-control" style="padding-left: 50px">
         <div style="display: inline-block">
