글 상세, 글 작성, 회원 가입 수정

--- a/src/main/resources/templates/writer.mustache
+++ b/src/main/resources/templates/writer.mustache
@@ -1,8 +1,9 @@
 {{>layouts/header}}
 <br>
+<link rel="stylesheet" href="/css/writer.css">
 <div class="container text-center">
 <form method="post" action="/boards/create_post">
-    <table class="table table-striped" style="text-align: center; border: solid 1px #dddddd">
+    <table class="table table-striped" style="text-align: center; border: solid 1px #dddddd; width: 800px">
         <thead>
         <tr>
             <th style="text-align: center;">게시판 글쓰기 양식</th>
