--- a/src/main/resources/templates/detail.mustache
+++ b/src/main/resources/templates/detail.mustache
@@ -1,17 +1,18 @@
 {{>layouts/header}}
 <br>
 
-<link rel="stylesheet" href="css/detail.css">
+<link rel="stylesheet" href="/css/detail.css">
 <div id="all">
     {{#board}}
     <div class="container">
-        <div class="detailbtn btn" style="float: right">
+        <div class="detail_btn" style="float: right">
             <!--href-->
-            <a href="/boards/delete/{{board.id}}" class="btn btn-primary">삭제</a>
-            <a href="/boards/edit/{{board.id}}" class="btn btn-primary">수정</a>
+            <!-- css가 풀린 부분.-->
+            <a href="/boards/delete/{{board.id}}" class="detail_btn" class="btn btn-primary">삭제</a>
+            <a href="/boards/edit/{{board.id}}" class="detail_btn" class="btn btn-primary">수정</a>
         </div>
         <ul>
-            <!-- css가 풀린 부분-->
+
             <li><input class="id" type="hidden" name="id"></li>
 
             <li><h2 class="title">제목 : {{board.title}}</h2></li>
