--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -19,7 +19,7 @@
     <form  action="/create" method="post" >
       <h1>회원 가입</h1>
 
-      <input type="text" name="name" placeholder="이름" "required/>
+      <input type="text" name="name" placeholder="이름" required/>
 
 
       <input class="birth_inp" type="text" name="birth" placeholder="출생년도 ex)981001" required />
@@ -59,7 +59,7 @@
         </div>
         }}
 
-        <button  type="submit"> 가입하기 </button>
+        <button type="submit" class="signup_btn" > 가입하기 </button>
 
         <div class="bottomText">
             이미 계정이 있으신가요? <a href="login">로그인 하기</a>
