글 상세, 글 작성, 회원 가입 수정

--- a/src/main/resources/templates/signup.mustache
+++ b/src/main/resources/templates/signup.mustache
@@ -52,7 +52,7 @@
             <button type="button" class="btn btn-secondary btn-sm ">인증번호 확인</button>
         </div>
 
-        <button  type="submit"> 가입하기 </button>
+        <button class="signup_btn" type="submit"> 가입하기 </button>
 
         <div class="bottomText">
             이미 계정이 있으신가요? <a href="login">로그인 하기</a>
