--- a/src/main/resources/templates/detail.mustache
+++ b/src/main/resources/templates/detail.mustache
@@ -5,10 +5,10 @@
 <div id="all">
     {{#board}}
     <div class="container">
-        <div class="detailbtn btn" style="float: right">
+        <div class="detail_btn" style="float: right">
             <!--href-->
-            <a href="/boards/delete/{{board.id}}" class="btn btn-primary">삭제</a>
-            <a href="/boards/edit/{{board.id}}" class="btn btn-primary">수정</a>
+            <a href="/boards/delete/{{board.id}}" class="detail_btn" class="btn btn-primary">삭제</a>
+            <a href="/boards/edit/{{board.id}}" class="detail_btn" class="btn btn-primary">수정</a>
         </div>
         <ul>
             <!-- css가 풀린 부분-->
@@ -19,25 +19,10 @@
             <li><pre class="content">내용 : {{board.content}}</pre></li>
             <img src="images" onerror="this.style.display='none';"/>
             {{!이미지가 없을 경우 대체 이미지 숨기기}}
-            <li class="cnt">
-                {{#goods}}
-                    <div>
-                    <form method="post" action="/boards/like/{{board.id}}">
-                        <input type="submit" value="좋아요">
-                    </form>
-                    </div>
-                {{/goods}}
-                {{^goods}}
-                    <div>
-                        <form method="post" action="/boards/like/{{board.id}}">
-                            <input type="submit" value="좋아요취소">
-                        </form>
-                    </div>
-                {{/goods}}
-
-
-            좋아요 수</li> <li class="cnt">조회 수 &nbsp;</li> <li style="float: right;"><h6>작성일자 : </h6></li>
-
+            <li class="cnt">좋아요 수&nbsp;</li> <li class="cnt">조회 수 &nbsp;</li> <li style="float: right;"><h6>작성일자 : </h6></li>
+            <div>
+                <a href="/contents/" >좋아요</a>
+            </div>
 
         </ul>
     </div>
