--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -15,7 +15,7 @@
         <!--<a href="/login" class="kakao_btn"><img src="https://user-images.githubusercontent.com/90165539/205678202-015b52d8-0b8c-4307-990a-65cc78269e7a.png"/></a>-->
 
         <div class="bottomText">
-            <a href="#">아이디 찾기 | </a>  <a href="#">비밀번호 찾기</a>
+            <a href="#" class="bottomA">아이디 찾기 | </a>  <a href="#" class="bottomA">비밀번호 찾기</a>
         </div>
     </form>
  </div>
