--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -24,12 +24,12 @@
                         카테고리
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/boards/일반게시판">일반게시판</a></li>
-                        <li><a class="dropdown-item" href="/">카테고리2</a></li>
+                        <li><a class="dropdown-item" href="/boards/Development">개발 아이디어</a></li>
+                        <li><a class="dropdown-item" href="/boards/Youtube">유튜브 아이디어</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/boards/notice">공지사항</a>
+                    <a class="nav-link" href="/boards/Notice">공지사항</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">고객센터</a>
