--- a/src/main/resources/templates/mypage01.mustache
+++ b/src/main/resources/templates/mypage01.mustache
@@ -9,6 +9,13 @@
 <!-- Bootstrap 5.2.3 Version -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
+<script>
+    {{#wrongId}}
+        alert("다른 유저의 마이페이지에 접근할 수 없습니다.")
+        window.location.href = "/"
+    {{/wrongId}}
+</script>
+
 <nav class="navbar navbar-expand-lg" style="background-color: lightskyblue">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Idea-Market</a>
@@ -37,13 +44,13 @@
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <p class="user" style="width: 150px">ooo님의 마이페이지</p>
+                    <p class="user" style="width: 150px; margin-right: 20px;">{{userLoginId}}님의 마이페이지</p>
                 </li>
-                <li class="mypage-config mr-3">
-                    <a class="logout ml-auto">개인정보수정</a>
+                <li class="nav-item">
+                    <button class="btn btn-success" onclick="location.href='/users/{{userId}}/edit'">개인정보수정</button>
                 </li>
-                <li class="logout">
-                    <a class="logout ml-auto">로그아웃</a>
+                <li class="nav-item" style="margin-left: 20px;">
+                    <button class="btn btn-danger" onclick="location.href='/users/logout'">로그아웃</button>
                 </li>
             </ul>
         </div>
